--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.66.0",
     "sqlite3": "^5.1.7"
   }
